# airflow-dag-generator-jinja

./: README.md  pyproject.toml  requirements.txt
app/: cli.py  dag_generator.py
app/configs/: config_dag_exemple_1.yaml  config_dag_exemple_2.yaml
app/dags/: dag_template_exemple_1.py  dag_template_exemple_2.py
app/templates/: dag_template.jinja2
